# django-permissions-prostgres

./: db.sqlite3  pyproject.toml  requirements.txt
equipment/: admin.py  models.py  permissions.py  urls.py  views.py
equipment/migrations/: 0001_initial.py
playground/: settings.py  urls.py
